--- a/hw2.qmd
+++ b/hw2.qmd
@@ -36,6 +36,14 @@ library(dplyr)
 library(purrr)
 library(cowplot)
 ```
+```{R}
+library(readr)
+library(tidyr)
+library(ggplot2)
+library(dplyr)
+library(purrr)
+library(cowplot)
+```
 
 
 <br><br><br><br>
@@ -69,6 +77,24 @@ abalone_col_names <- c(
 
 abalone <- ... # Insert your code here
 ```
+```{R}
+library(readr)
+url <- "http://archive.ics.uci.edu/ml/machine-learning-databases/abalone/abalone.data"
+
+abalone_col_names <- c(
+  "sex", 
+  "length", 
+  "diameter", 
+  "height", 
+  "whole_weight", 
+  "shucked_weight", 
+  "viscera_weight", 
+  "shell_weight", 
+  "rings"
+)
+
+abalone <- read_csv(url, col_names = abalone_col_names)
+```
 
 ---
 
@@ -78,6 +104,9 @@ Remove missing values and `NA`s from the dataset and store the cleaned data in a
 
 ```R
 df <- ... # Insert your code here
+```
+```{R}
+df <- drop_na(abalone)
 ```
 
 
@@ -92,6 +121,15 @@ Plot histograms of all the quantitative variables in a **single plot** [^footnot
 ```R
 ... # Insert your code here
 ```
+```{R}
+df %>% 
+  select(where(is.numeric)) %>% 
+  pivot_longer(everything()) %>% 
+  ggplot() +
+  geom_histogram(aes(x = value)) +
+  facet_wrap(~name, scales = 'free_x')
+
+```
 
 
 ---
@@ -103,9 +141,19 @@ Create a boxplot of `length` for each `sex` and create a violin-plot of of `diam
 ```R
 ... # Insert your code for boxplot here
 ```
+```{R}
+df %>%
+  ggplot() +
+  geom_boxplot(aes(y=length, x= sex , fill=sex))
+```
 
 ```R
 ... # Insert your code for violinplot here
+```
+```{R}
+df %>%
+  ggplot() +
+  geom_violin(aes(y=diameter, x=sex, fill=sex))
 ```
 
 
@@ -120,6 +168,11 @@ Create a scatter plot of `length` and `diameter`, and modify the shape and color
 ```R
 ... # Insert your code here
 ```
+```{R}
+df %>%
+  ggplot()+
+  geom_point(aes(y = diameter,x = length, shape = sex, color = sex, size=shell_weight))
+```
 
 ---
 
@@ -130,6 +183,26 @@ For each `sex`, create separate scatter plots of `length` and `diameter`. For ea
 
 ```R
 ... # Insert your code here
+```
+```{R}
+```
+
+
+```{R}
+df %>%
+  ggplot()+
+  geom_point(aes(x=length, y=height, shape=sex, color=sex)) + 
+  geom_smooth(aes(x=length, y=height), method=lm) +
+  facet_wrap(~sex, 3, 1)
+```
+
+
+```{R}
+df %>%
+  ggplot()+
+  geom_point(aes(x=diameter, y=height, shape=sex, color=sex)) + 
+  geom_smooth(aes(x=diameter, y=height), method=lm) +
+  facet_wrap(~sex, 3, 1)
 ```
 
 
