--- a/hw2.qmd
+++ b/hw2.qmd
@@ -230,6 +230,15 @@ Filter the data to only include abalone with a length of at least $0.5$ meters. 
 ```R
 df %>% ... # Insert your code here
 ```
+```{R}
+df %>% 
+  filter(length > 0.5) %>% 
+  group_by(sex) %>% 
+  summarise_if(is.numeric, mean, na.rm=TRUE) %>% 
+  pivot_longer(-c(sex)) %>% 
+  ggplot() + 
+  geom_bar(aes(x=name, y=value, fill=sex), stat='identity', position='dodge')
+```
 
 
 ---
@@ -252,6 +261,27 @@ Implement the following in a **single command**:
 ```R
 df %>% ... # Insert your code here
 ```
+```{R}
+df %>% 
+  mutate(
+    num_rings = case_when(
+      rings < 10 ~ "low", 
+      rings > 20 ~ "high", 
+      TRUE ~ "med"
+    )
+  ) %>% 
+  group_by(num_rings, sex) %>% 
+  summarise(
+    avg_weight = mean(whole_weight + shucked_weight + viscera_weight + shell_weight, na.rm = TRUE)
+  ) %>% 
+  ggplot(aes(x = num_rings, y = sex, fill = avg_weight)) + 
+    geom_tile() + 
+    labs(
+      title = "'num_rings` vs `sex'",
+      x = "Number of Rings",
+      y = "Sex",
+      fill = "Average Weight") 
+```
 
 
 
@@ -266,6 +296,15 @@ Make a table of the pairwise correlations between all the numeric variables roun
 df %>% ... # Insert your code here
 ```
 
+```{R}
+numeric_df <- df[sapply(df, is.numeric)]
+
+# Compute correlation matrix
+cor_matrix <- cor(numeric_df)
+
+# Print the rounded correlation matrix
+print(round(cor_matrix,digits = 2))
+```
 
 
 ---
@@ -281,6 +320,16 @@ Use the `map2()` function from the `purrr` package to create a scatter plot for 
 
 ```R
 ... # Insert your code here
+```
+```{R}
+numeric_df %>%
+  names() %>% # Get names of these columns
+  map2(.,.,~ {
+    ggplot(data = df, aes_string(x = "rings", y = .x, color = "sex")) +
+      geom_point() +
+      labs(title = .x, x = "Rings", y = .x)
+  }) %>%
+  cowplot::plot_grid(plotlist = ., ncol = 3)
 ```
 
 
@@ -306,6 +355,11 @@ Perform a simple linear regression with `diameter` as the covariate and `height`
 ```R
 ... # Insert your code here
 ```
+```{R}
+LR_model <- lm(height ~ diameter, df)
+
+summary(LR_model)
+```
 
 
 
@@ -318,6 +372,10 @@ Make a scatterplot of `height` vs `diameter` and plot the regression line in `co
 
 ```R
 ... # Insert your code here
+```
+```{R}
+plot(df$height,df$diameter, xlab = "height", ylab = "diameter")
+abline(LR_model,col ="red")
 ```
 
 
@@ -345,6 +403,29 @@ new_diameters <- c(
 
 
 ... # Insert your code here. 
+```
+```{R}
+new_diameters <- c(
+  0.15218946,
+  0.48361548,
+  0.58095513,
+  0.07603687,
+  0.50234599,
+  0.83462092,
+  0.95681938,
+  0.92906875,
+  0.94245437,
+  0.01209518
+)
+
+new_df <- data.frame(diameter=new_diameters)
+
+new_heights <- predict(LR_model, new_df)
+plot(df$height, df$diameter, xlab="Height", ylab="Diameter")
+abline(LR_model, col="red")
+
+# Add the new observations and their predicted heights to the plot
+points(new_diameters, new_heights, col="violet", pch=20, cex=1.5)
 ```
 
 
