--- a/hw2.qmd
+++ b/hw2.qmd
@@ -59,24 +59,7 @@ EDA using `readr`, `tidyr` and `ggplot2`
 
 Load the "Abalone" dataset as a tibble called `abalone` using the URL provided below. The `abalone_col_names` variable contains a vector of the column names for this dataset (to be consistent with the R naming pattern). Make sure you read the dataset with the provided column names. 
 
-```R
-library(readr)
-url <- "http://archive.ics.uci.edu/ml/machine-learning-databases/abalone/abalone.data"
 
-abalone_col_names <- c(
-  "sex", 
-  "length", 
-  "diameter", 
-  "height", 
-  "whole_weight", 
-  "shucked_weight", 
-  "viscera_weight", 
-  "shell_weight", 
-  "rings"
-)
-
-abalone <- ... # Insert your code here
-```
 ```{R}
 library(readr)
 url <- "http://archive.ics.uci.edu/ml/machine-learning-databases/abalone/abalone.data"
@@ -102,13 +85,13 @@ abalone <- read_csv(url, col_names = abalone_col_names)
 
 Remove missing values and `NA`s from the dataset and store the cleaned data in a tibble called `df`. How many rows were dropped?
 
-```R
-df <- ... # Insert your code here
-```
+
+
 ```{R}
 df <- drop_na(abalone)
 ```
 
+None
 
 
 
@@ -138,24 +121,19 @@ df %>%
 
 Create a boxplot of `length` for each `sex` and create a violin-plot of of `diameter` for each `sex`. Are there any notable differences in the physical appearences of abalones based on your analysis here?
 
-```R
-... # Insert your code for boxplot here
-```
 ```{R}
 df %>%
   ggplot() +
   geom_boxplot(aes(y=length, x= sex , fill=sex))
 ```
 
-```R
-... # Insert your code for violinplot here
-```
+
 ```{R}
 df %>%
   ggplot() +
   geom_violin(aes(y=diameter, x=sex, fill=sex))
 ```
-
+These visual differences suggest potential sexual dimorphism in size, with females slightly larger in length.
 
 ---
 
@@ -165,27 +143,18 @@ Create a scatter plot of `length` and `diameter`, and modify the shape and color
 
 
 
-```R
-... # Insert your code here
-```
 ```{R}
 df %>%
   ggplot()+
   geom_point(aes(y = diameter,x = length, shape = sex, color = sex, size=shell_weight))
 ```
-
+No significant anomalies or outliers are evident in the dataset based on this visualization.
 ---
 
 ###### 1.6 (5 points)
 
 For each `sex`, create separate scatter plots of `length` and `diameter`. For each plot, also add a **linear** trendline to illustrate the relationship between the variables. Use the `facet_wrap()` function in R for this, and ensure that the plots are vertically stacked **not** horizontally. You should end up with a plot that looks like this: [^footnote_plot_facet]
 
-
-```R
-... # Insert your code here
-```
-```{R}
-```
 
 
 ```{R}
@@ -227,9 +196,6 @@ More advanced analyses using `dplyr`, `purrrr` and `ggplot2`
 Filter the data to only include abalone with a length of at least $0.5$ meters. Group the data by `sex` and calculate the mean of each variable for each group. Create a bar plot to visualize the mean values for each variable by `sex`.
 
 
-```R
-df %>% ... # Insert your code here
-```
 ```{R}
 df %>% 
   filter(length > 0.5) %>% 
@@ -258,9 +224,7 @@ Implement the following in a **single command**:
 3. Use the `geom_tile()` function to create a tile plot of `num_rings` vs `sex` with the color indicating of each tile indicating the `avg_weight` value. 
 
 
-```R
-df %>% ... # Insert your code here
-```
+
 ```{R}
 df %>% 
   mutate(
@@ -292,10 +256,6 @@ df %>%
 Make a table of the pairwise correlations between all the numeric variables rounded to 2 decimal points. Your final answer should look like this [^footnote_table]
 
 
-```R
-df %>% ... # Insert your code here
-```
-
 ```{R}
 numeric_df <- df[sapply(df, is.numeric)]
 
@@ -318,9 +278,7 @@ Use the `map2()` function from the `purrr` package to create a scatter plot for 
 :::
 
 
-```R
-... # Insert your code here
-```
+
 ```{R}
 numeric_df %>%
   names() %>% # Get names of these columns
@@ -352,9 +310,6 @@ Linear regression using `lm`
 Perform a simple linear regression with `diameter` as the covariate and `height` as the response. Interpret the model coefficients and their significance values. 
 
 
-```R
-... # Insert your code here
-```
 ```{R}
 LR_model <- lm(height ~ diameter, df)
 
@@ -370,9 +325,7 @@ summary(LR_model)
 Make a scatterplot of `height` vs `diameter` and plot the regression line in `color="red"`. You can use the base `plot()` function in R for this. Is the linear model an appropriate fit for this relationship? Explain. 
 
 
-```R
-... # Insert your code here
-```
+
 ```{R}
 plot(df$height,df$diameter, xlab = "height", ylab = "diameter")
 abline(LR_model,col ="red")
@@ -386,24 +339,7 @@ abline(LR_model,col ="red")
 
 Suppose we have collected observations for "new" abalones with `new_diameter` values given below. What is the expected value of their `height` based on your model above? Plot these new observations along with your predictions in your plot from earlier using `color="violet"`
 
-```R
 
-new_diameters <- c(
-  0.15218946,
-  0.48361548,
-  0.58095513,
-  0.07603687,
-  0.50234599,
-  0.83462092,
-  0.95681938,
-  0.92906875,
-  0.94245437,
-  0.01209518
-)
-
-
-... # Insert your code here. 
-```
 ```{R}
 new_diameters <- c(
   0.15218946,
